<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp10"
    android:layout_marginRight="@dimen/dp10">

    <ImageView
        android:id="@+id/Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:elevation="@dimen/dp5"
        android:layout_alignParentRight="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp10"
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp25"
                android:layout_marginBottom="@dimen/dp25">

                <TextView
                    android:id="@+id/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:textAlignment="center"
                    android:textSize="@dimen/dp16"
                    android:text="@string/aboutMe"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:textAlignment="center"
                    android:textSize="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/Request"
                    android:paddingBottom="@dimen/dp30"/>

                <TextView
                    android:id="@+id/versi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:textAlignment="center"
                    android:textSize="@dimen/dp16"
                    android:text="@string/Version"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:textAlignment="center"
                    android:textSize="@dimen/dp16"
                    android:text="@string/Copyright"/>



            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>