<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp16"
        android:paddingTop="@dimen/dp16"
        android:paddingRight="@dimen/dp16">
        <ImageView
            android:id="@+id/images_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_images_login" />

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="@dimen/dp150"
            android:layout_marginLeft="@dimen/dp150"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/bg_btn_masuk"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/keluar"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:gravity="top|start"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp24"
        android:paddingRight="@dimen/dp24">

        <TextView
            android:id="@+id/txtHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hi"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp16"
            android:layout_gravity="start"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_bottom"
        android:gravity="top|start"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp24"
        android:paddingRight="@dimen/dp24">

        <TextView
            android:id="@+id/pilihmerchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp16"
            android:layout_gravity="start"
            android:text="@string/pilihmerchant"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/Ly_FrList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/lin_merchant"
        android:paddingLeft="@dimen/dp16"
        android:paddingRight="@dimen/dp16">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ly_FrList">

        <androidx.core.widget.NestedScrollView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp60"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingLeft="@dimen/dp24"
            android:paddingTop="@dimen/dp24"
            android:paddingRight="@dimen/dp24">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:orientation="vertical"
                android:padding="@dimen/dp10"
                android:background="@color/colorAccentSplash"
                android:gravity="center"
                android:id="@+id/ll">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_carrier"
                        android:layout_width="@dimen/dp160"
                        android:layout_height="@dimen/dp190"
                        android:layout_margin="@dimen/dp10"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/colorAccentSplash"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/dp65"
                                android:layout_height="@dimen/dp65"
                                android:background="@drawable/cerclebackgroundpurple"
                                android:padding="@dimen/dp10"
                                android:src="@drawable/ic_backpack" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dp10"
                                android:text="@string/carrier"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp1"
                                android:layout_margin="@dimen/dp10"
                                android:background="@color/lightgray" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="@dimen/dp5"
                                android:text="@string/carrier_desc"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_tent"
                        android:layout_width="@dimen/dp160"
                        android:layout_height="@dimen/dp190"
                        android:layout_margin="@dimen/dp10"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorAccentSplash"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/dp65"
                                android:layout_height="@dimen/dp65"
                                android:background="@drawable/cerclebackgroundyello"
                                android:padding="@dimen/dp10"
                                android:src="@drawable/ic_barracks" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dp10"
                                android:text="@string/Tent"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp1"
                                android:layout_margin="@dimen/dp10"
                                android:background="@color/lightgray" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="@dimen/dp5"
                                android:text="@string/tent_desc"
                                android:textColor="@android:color/white" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_acc"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="@dimen/dp340"
                        android:layout_height="@dimen/dp150"
                        android:layout_margin="@dimen/dp10">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:background="@color/colorAccentSplash"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="@dimen/dp65"
                                android:layout_height="@dimen/dp65"
                                android:background="@drawable/cerclebackgroundpink"
                                android:src="@drawable/ic_knot"
                                android:padding="@dimen/dp10"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="@dimen/dp10"
                                android:text="@string/Acc"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/lightgray"
                                android:layout_margin="@dimen/dp10"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="@dimen/dp5"
                                android:text="@string/acc_desc"
                                android:textColor="@android:color/white" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</RelativeLayout>