<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp24"
    android:background="@drawable/ic_bg_main"
    tools:context=".projectakhir.RegisterActivity">

  <LinearLayout
      android:id="@+id/lin_top"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:orientation="vertical">
    <ImageView
        android:id="@+id/images_login"
        android:layout_width="@dimen/dp300"
        android:layout_height="@dimen/dp300"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_images_login" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/lin_middle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_gravity="center"
      android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp16"
        android:textStyle="bold" />

    <View
        android:layout_width="@dimen/dp20"
        android:layout_height="@dimen/dp3"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:background="#ffffff" />

    <EditText
        android:id="@+id/edt_reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:backgroundTint="@android:color/white"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="@dimen/dp10"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="@dimen/sp14" />

    <EditText
        android:id="@+id/edt_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:backgroundTint="@android:color/white"
        android:hint="@string/password"
        android:imeActionId="6"
        android:imeActionLabel="Sign In"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:drawableLeft="@drawable/ic_pass"
        android:drawablePadding="@dimen/dp10"
        android:textSize="@dimen/sp14" />

    <EditText
        android:id="@+id/edt_reg_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:backgroundTint="@android:color/white"
        android:hint="@string/confirm"
        android:imeActionId="6"
        android:imeActionLabel="Sign In"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:drawableLeft="@drawable/ic_pass"
        android:drawablePadding="@dimen/dp10"
        android:textSize="@dimen/sp14" />

    <EditText
        android:id="@+id/edt_reg_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:backgroundTint="@android:color/white"
        android:hint="@string/phonenumber"
        android:imeActionLabel="Sign In"
        android:imeOptions="actionDone"
        android:inputType="text|number"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="@dimen/dp10"
        android:textSize="@dimen/sp14" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/lin_bottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/lin_middle"
      android:layout_alignParentBottom="true"
      android:gravity="bottom"
      android:orientation="vertical">

    <TextView

        android:id="@+id/txt_reg_masuk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp50"
        android:layout_marginRight="@dimen/dp50"
        android:background="@drawable/bg_btn_masuk"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />
  </LinearLayout>

  </RelativeLayout>